Closed
Bug 1139603
Opened 6 years ago
Closed 6 years ago
Fix -Winconsistent-missing-override warnings introduced in bug 940273
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla39
Tracking | Status | |
---|---|---|
firefox39 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
References
Details
Attachments
(1 file)
1.77 KB,
patch
|
Details | Diff | Splinter Review |
Bug 940273's commit ( http://hg.mozilla.org/mozilla-central/rev/b8dc4a7b444a ) introduced 3 -Winconsistent-missing-override build warnings (in clang 3.6 and newer), which are treated as errors in --enable-warnings-as-errors builds: { dom/cache/CacheParent.h:49:3: error: 'RecvPut' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] RecvPut(const RequestId& aRequestId, const CacheRequestResponse& aPut); ^ } { dom/cache/QuotaClient.cpp:197:3: error: 'AddRef' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] NS_INLINE_DECL_REFCOUNTING(CacheQuotaClient) ^ } { dom/cache/QuotaClient.cpp:197:3: error: 'Release' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] NS_INLINE_DECL_REFCOUNTING(CacheQuotaClient) ^ } Filing this bug on fixing those.
Assignee | ||
Comment 1•6 years ago
|
||
(I'm gonna land a fix with the blanket r+ that ehsan granted me for fixes of this sort over on bug 1126447 comment 2.)
Assignee | ||
Comment 2•6 years ago
|
||
Tree's closed at the moment; I'll land later. Here's the fix, for the record.
Assignee | ||
Comment 3•6 years ago
|
||
Landed: https://hg.mozilla.org/integration/mozilla-inbound/rev/76aa36cef867
Flags: in-testsuite-
Comment 4•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/76aa36cef867
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•