Bug 1139603: Add MOZ_OVERRIDE annotations in CacheParent.h and QuotaClient.cpp to fix clang -Winconsistent-missing-override. r=ehsan