dom/cache/CacheParent.h
@@ -46,7 +46,8 @@ private:
   RecvAddAll(const RequestId& aRequestId,
              nsTArray<PCacheRequest>&& aRequests) MOZ_OVERRIDE;
   virtual bool
-  RecvPut(const RequestId& aRequestId, const CacheRequestResponse& aPut);
+  RecvPut(const RequestId& aRequestId,
+          const CacheRequestResponse& aPut) MOZ_OVERRIDE;
   virtual bool
   RecvDelete(const RequestId& aRequestId, const PCacheRequest& aRequest,
              const PCacheQueryParams& aParams) MOZ_OVERRIDE;
